[package]
name = "wasm-logger"
version = "0.2.0"
authors = ["Limira"]
license = "MIT OR Apache-2.0"
categories = ["wasm", "development-tools::debugging"]
repository = "https://gitlab.com/limira-rs/wasm-logger"
keywords = ["wasm", "front-end", "logger", "console", "log"]
description = "A logger that sends a message with its Rust source's line and filename to the browser console"
readme = "./README.md"
documentation = "https://docs.rs/wasm-logger"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version="0.3", features=["console"] }
log = { version="0.4", features=["std"] }

[workspace]
members = [
    "examples/log"
]
