[package]
name = "wasm_logger"
version = "0.3.0"
authors = ["Limira"]
license = "MIT OR Apache-2.0"
categories = ["wasm", "development-tools::debugging"]
repository = "https://github.com/s1gtrap/wasm_logger"
keywords = ["wasm", "front-end", "logger", "console", "log"]
description = "A logger that sends a message with its Rust source's line and filename to the browser console"
readme = "./README.md"
documentation = "https://docs.rs/wasm_logger"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version="0.3", features=["console"] }
log = { version="0.4", features=["std"] }

[workspace]
members = [
    "examples/log"
]
