[package]
name = "example"
version = "0.1.0"
authors = ["The wasm-bindgen Developers", "Limira"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
wasm-log = { path = "../../" }

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
